<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <suda.sudamodweather.widget.WindmillView
            android:id="@+id/windViewBig"
            android:layout_width="150dp"
            android:layout_height="100dp" />

        <suda.sudamodweather.widget.WindmillView
            android:id="@+id/windViewSmall"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/activity_home_str_wind_direction"
                    android:textColor="@color/home_text_color_dark"
                    android:textSize="13.0sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="20.0dip"
                    android:background="@color/home_inside_divider_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:id="@+id/tv_windDire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="东南风"
                    android:textColor="@color/home_text_color"
                    android:textSize="13.0sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="20.0dip"
                    android:background="@color/home_inside_divider_color" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/activity_home_str_wind_speed"
                    android:textColor="@color/home_text_color_dark"
                    android:textSize="13.0sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="20.0dip"
                    android:background="@color/home_inside_divider_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:id="@+id/tv_windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="2级"
                    android:textColor="@color/home_text_color"
                    android:textSize="13.0sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="20.0dip"
                    android:background="@color/home_inside_divider_color" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:text="@string/activity_home_str_humidity"
                android:textColor="@color/home_text_color_dark"
                android:textSize="13.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ProgressBar
                    android:id="@+id/pb_humidity"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0.0dip"
                    android:layout_height="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_weight="3.0"
                    android:max="100"
                    android:progress="83"
                    android:theme="@style/LinearProgress" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_weight="1.0"
                    android:text="83"
                    android:textColor="@color/home_text_color"
                    android:textSize="13.0sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
